--- a/src/components/Stack.css
+++ b/src/components/Stack.css
@@ -1,7 +1,7 @@
 .stack {
-  border-left: 1px solid #dddddd;
-  border-right: 1px solid #dddddd;
-  border-bottom: 1px solid #dddddd;
+  border-left: 1px solid #888888;
+  border-right: 1px solid #888888;
+  border-bottom: 1px solid #888888;
 
   width: 200px;
   height: 500px;
