--- a/src/components/Stack.css
+++ b/src/components/Stack.css
@@ -9,6 +9,7 @@
   display: flex;
   flex-direction: column-reverse;
   justify-content: flex-start;
+  border-radius: 0 0 3px 3px;
 }
 
 .stack-item {
