--- a/src/components/Queue.css
+++ b/src/components/Queue.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   margin-top: 150px;
-  margin-left: -150px;
+  margin-left: -50%;
 }
 
 .queue-item {
@@ -17,7 +17,7 @@
 @keyframes animate-left {
   from {
     opacity: 0;
-    margin-left: 150px;
+    margin-left: 50%;
   }
   to {
     opacity: 1;
