--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,7 +1,7 @@
 .navbar {
   height: 50px;
   line-height: 50px;
-  background-color: #efefef;
+  background-color: #dddddd;
   margin-bottom: 10px;
 }
 
