moving margin somewhere

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -2,7 +2,7 @@
   height: 50px;
   line-height: 50px;
   background-color: #dddddd;
-  margin-bottom: 10px;
+  margin-bottom: 2rem;
 }
 
 .navbar-item {
