--- a/src/components/Box.css
+++ b/src/components/Box.css
@@ -1,8 +1,8 @@
 .box {
   text-align: center;
-  font-size: 3em;
+  font-size: 2.5em;
   background-color: #dddddd;
-  color: #ffffff;
+  color: #444444;
   padding: 20px;
   border-radius: 3px;
   position: relative;
